<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_new">

    <include layout="@layout/basexml" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="250.0dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@id/liner_smooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btnSmoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/dsmooth"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/liner_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btncoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/silver"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/liner_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btnround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/sillky"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/liner_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btnblack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/pure"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/liner_squre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btnsquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/squer"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/liner_dround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="2.0dip"
                android:weightSum="1.0">

                <Button
                    android:id="@id/btndround"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:background="@drawable/radio"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="0.4"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="-2.0"
                    android:shadowDy="-2.0"
                    android:shadowRadius="1.0"
                    android:text="@string/dround"
                    android:textColor="#ffffffff"
                    android:textSize="22.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>